@@ -14,8 +14,7 @@ Universal / javaOptions ++= Seq(
   "-J-XX:MaxRAMFraction=2",
   "-J-XX:InitialRAMFraction=2",
   "-J-XX:MaxMetaspaceSize=300m",
-  "-J-XX:+PrintGCDetails",
-  "-J-XX:+PrintGCDateStamps",
+  "-J-Xlog:gc*",
   s"-J-Xloggc:/var/log/${packageName.value}/gc.log"
 )
 
@@ -82,4 +81,4 @@ Universal / packageName := name.value
 maintainer := "Guardian Developers <dig.dev.software@theguardian.com>"
 packageSummary := "AMIable"
 packageDescription := """Web app for monitoring the use of AMIs"""
-debianPackageDependencies := Seq("openjdk-8-jre-headless")
+debianPackageDependencies := Seq("java-11-amazon-corretto-jdk:arm64")
